--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -16,6 +16,7 @@
 <body>
     <!-- header-section -->
     <header class="sticky">
+         <a href="" class="logo"><img src="/img/portfolio-png-png-image-186415.png" alt=""></a>
         <div class="bx bx-menu" id="menu-icon"></div>
         <ul class="navlist">
             <li><a href="#home"></a>Home</li>
