--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -165,7 +165,7 @@
     <!-- end-section -->
     <section class="end-section ">
         <h3>P GokulGK</h3>
-        <a class="resume" href="#">RESUME LINK</a>
+        <a class="resume" href="https://www.canva.com/design/DAF88g__DQc/ObNpD1q5cz0ISWNRhjC5Zw/edit?utm_content=DAF88g__DQc&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">RESUME LINK</a>
         <div class="end-icon">
             <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                     class="bi bi-facebook" viewBox="0 0 16 16">
