--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
             <h1>Gokul</h1>
             <h4>Full Stact Developer</h4>
             <a href="#" class="btn">My Works</a>
-        </div> <img src="gk.png" alt="">
+        </div> <img src="/Assest/gk.png" alt="">
 
     </section>
     <!-- about-section -->
 
     <section class="about" id="about">
         <div class="about-img">
-            <img src="/img/IMG_20230127_104951_003-removebg-preview (1).png" alt="">
+            <img src="/Assest/image" alt="gokul image">
         </div>
         <div class="about-text">
             <h2>About</h2>
