--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <!-- header-section -->
     <header class="sticky">
-         <a href="" class="logo"><img src="/img/portfolio-png-png-image-186415.png" alt=""></a>
+         <a href="" class="logo"><img src="portfolio-png-png-image-186415.png" alt=""></a>
         <div class="bx bx-menu" id="menu-icon"></div>
         <ul class="navlist">
             <li><a href="#home"></a>Home</li>
@@ -50,7 +50,7 @@
 
     <section class="about" id="about">
         <div class="about-img">
-            <img src="/Assest/image" alt="gokul image">
+            <img src="/Assest/gokul" alt="gokul image">
         </div>
         <div class="about-text">
             <h2>About</h2>
