--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <section class="about" id="about">
         <div class="about-img">
-            <img src="/Assest/gokul" alt="gokul image">
+            <img src="/Assest/gokul.png" alt="gokul image">
         </div>
         <div class="about-text">
             <h2>About</h2>
