--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <!-- header-section -->
     <header class="sticky">
-         <a href="" class="logo"><img src="portfolio-png-png-image-186415.png" alt=""></a>
+         <a href="" class="logo"><img src="../Assest/portfolio-png-png-image-186415.png" alt=""></a>
         <div class="bx bx-menu" id="menu-icon"></div>
         <ul class="navlist">
             <li><a href="#home"></a>Home</li>
@@ -43,14 +43,14 @@
             <h1>Gokul</h1>
             <h4>Full Stact Developer</h4>
             <a href="#" class="btn">My Works</a>
-        </div> <img src="/Assest/gk.png" alt="">
+        </div> <img src="../Assest/gk.png" alt="">
 
     </section>
     <!-- about-section -->
 
     <section class="about" id="about">
         <div class="about-img">
-            <img src="/Assest/gokul.png" alt="gokul image">
+            <img src="../Assest/gokul.png" alt="gokul image">
         </div>
         <div class="about-text">
             <h2>About</h2>
