--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <!-- header-section -->
     <header class="sticky">
-         <a href="" class="logo"><img src="./Assest/portfolio-png-png-image-186415.png" alt=""></a>
+        <a href="" class="logo"><img src="./Assest/portfolio-png-png-image-186415.png" alt=""></a>
         <div class="bx bx-menu" id="menu-icon"></div>
         <ul class="navlist">
             <li><a href="#home"></a>Home</li>
@@ -43,14 +43,14 @@
             <h1>Gokul</h1>
             <h4>Full Stact Developer</h4>
             <a href="#" class="btn">My Works</a>
-        </div> <img src="./Assest/gk.png" alt="">
+        </div>
 
     </section>
     <!-- about-section -->
 
     <section class="about" id="about">
         <div class="about-img">
-            <img src="./Assest/gokul.png" alt="gokul image">
+            <img src=".Assest/IMG_20230127_104951_003-removebg-preview (1).png" alt="">
         </div>
         <div class="about-text">
             <h2>About</h2>
@@ -165,9 +165,9 @@
     <!-- end-section -->
     <section class="end-section ">
         <h3>P GokulGK</h3>
-        <a class="resume" href="https://www.canva.com/design/DAF88g__DQc/ObNpD1q5cz0ISWNRhjC5Zw/edit?utm_content=DAF88g__DQc&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">RESUME LINK</a>
+        <a class="resume" href="#">RESUME LINK</a>
         <div class="end-icon">
-         <a href="https://www.facebook.com/profile.php?id=100066216365747"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+            <a href="https://www.facebook.com/profile.php?id=100066216365747"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                     class="bi bi-facebook" viewBox="0 0 16 16">
                     <path
                         d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951" />
