--- a/bootsrtap/divider.html
+++ b/bootsrtap/divider.html
@@ -47,13 +47,13 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="/img/5playersjpg.jpg" class="d-block w-100" alt="Pubg-image" style="height: 100vh;">
+        <img src="./Assest/5playersjpg.jpg" class="d-block w-100" alt="Pubg-image" style="height: 100vh;">
       </div>
       <div class="carousel-item">
-        <img src="/img/cool.jpg" class="d-block w-100" alt="Pubg-image" style="height: 100vh;">
+        <img src="./Assest/cool.jpg" class="d-block w-100" alt="Pubg-image" style="height: 100vh;">
       </div>
       <div class="carousel-item">
-        <img src="/img/SphD.jpg" class="d-block w-100" alt="spiderman-image" style="height: 100vh;">
+        <img src="./Assest/SphD.jpg" class="d-block w-100" alt="spiderman-image" style="height: 100vh;">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
