--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             <div class="dropdown">
                 <button class="dropbtn">Dropdown</button>
                 <div class="dropdown-content">
-                    <a href="#">Link</a>
-                    <a href="#">Link</a>
+                    <a href="./bootsrtap/index.html">Link</a>
+                    <a href="./bootsrtap/divider.html">Link</a>
                     <a href="#">Link</a>
                 </div>
             </div>
