--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body style="background-color: black; color: #ffff;">
   <nav class="navbar navbar-expand-lg navbar-light " style="background-color: black;">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#"><img style="width: 100px;height: 30px;" src="portfolio-png-png-image-186415.png"
+      <a class="navbar-brand" href="#"><img style="width: 100px;height: 30px;" src="./Assest/portfolio-png-png-image-186415.png"
           alt=""></a>
       <button class="navbar-toggler text-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -70,7 +70,7 @@
 
   <div class="about" id="section2">
     <div class="about-img">
-      <img src="/IMG_20230127_104951_003-removebg-preview (1).png" alt="">
+      <img src="./Assest/IMG_20230127_104951_003-removebg-preview (1).png" alt="">
     </div>
     <div class="about-text">
       <h2>About</h2>
