--- a/New-folder/signup.html
+++ b/New-folder/signup.html
@@ -60,7 +60,7 @@
             <input type="password" id="currectpassword" placeholder="Confirm  Password" > 
             <div class="error1" id="currect1"></div>
             <div class="error" id="currect2"></div>
-            <p>Already Have An account? <a href="login.html" style="text-decoration: none;">Login</a></p>
+            <p>Already Have An account? <a href="index.html" style="text-decoration: none;">Login</a></p>
             <button type="submit" onclick="btn()">Sign In</button>
         </form>
         <h5>____________Or____________</h5>
