--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
   <div class="about" id="section2">
     <div class="about-img">
-      <img src="./Assest/IMG_20230127_104951_003-removebg-preview (1).png" alt="">
+      <img src="./Assest/gokul.png" alt="">
     </div>
     <div class="about-text">
       <h2>About</h2>
