--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container-fluid">
       <a class="navbar-brand" href="#"><img style="width: 100px;height: 30px;" src="./Assest/portfolio-png-png-image-186415.png"
           alt=""></a>
-      <button class="navbar-toggler text-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      <button class="navbar-toggler" style="background-color: aliceblue;" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
