--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
             </a>
             <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
               <li><a class="dropdown-item" href="./New-folder/index.html">login</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
+              <li><a class="dropdown-item" href="#">link</a></li>
+              <li><a class="dropdown-item" href="#">link</a></li>
             </ul>
           </li>
       </div>
