--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <div class="about-text">
       <h2>About</h2>
 
-      <h5>I Am Full stack developer <span>Front-End Developer & Back-End Developer</span></h5>
+      <h5>I Am Full stack developer <span>Front-End,Databases & Back-End Developer</span></h5>
       <p>A Full Stack Developer is a professional who is proficient in both front-end and back-end
         technologies,
         capable of building web applications from start to finish. Here's a summary of the skills and
