--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div class="text">
       <h3>Haii I' m</h3>
       <h1>Gokul</h1>
-      <h4>Full Stact Developer</h4>
+      <h4>Full Stack Developer</h4>
       <a href="#" class="button">My Works</a>
     </div>
 
