--- a/index.html
+++ b/index.html
@@ -76,16 +76,9 @@
       <h2>About</h2>
 
       <h5>I Am Full stack developer <span>Front-End,Databases & Back-End Developer</span></h5>
-      <p>A Full Stack Developer is a professional who is proficient in both front-end and back-end
-        technologies,
-        capable of building web applications from start to finish. Here's a summary of the skills and
-        responsibilities typically associated with a Full Stack Developer, Full Stack Developers play a
-        crucial
-        role in the development lifecycle, bridging the gap between front-end and back-end development to
-        create
-        robust and scalable web applications. They need to be versatile and adaptable, able to work on
-        various
-        technologies and handle different aspects of application development.</p>
+      <p>Hi, I'm [Gokul], a passionate Full Stack Developer with a knack for building dynamic and responsive web applications.
+        With a strong foundation in both front-end and back-end technologies,
+        I thrive on solving complex problems and delivering seamless user experiences.</p>
       <a href="#" class="button">Hire me</a>
     </div>
   </div>
