--- a/index.html
+++ b/index.html
@@ -95,10 +95,13 @@
             d="M11 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM5 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z" />
           <path d="M8 14a1 1 0 1 0 0-2 1 1 0 0 0 0 2" />
         </svg>
-        <h3>Web Disgin</h3>
-        <p>Web design encompasses many different skills and disciplines in the production and maintenance of
-          standardised code and proprietary software; </p>
-        <a href="#" class="s-btnn"> Read More</a>
+        <h3>Front-End</h3>
+        <p>HTML is essential for web development, providing the structure and layout of web pages.Hypertext refers to text containing links,
+          or hyperlinks, that navigate to other pages when clicked. </p>
+        <a href="As a markup language, HTML can format text into images, tables, links, and more.
+          Created by Tim Berners-Lee, HTML lays the foundation for web page design. The latest version, 
+          HTML5, released on October 28, 2014, by W3C, introduced new features for handling multimedia 
+          elements like video and audio more efficiently." class="s-btnn"> Read More</a>
       </div>
 
       <div class="service-box">
