--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
         <h3>Front-End</h3>
         <p>HTML is essential for web development, providing the structure and layout of web pages.Hypertext refers to text containing links,
           or hyperlinks, that navigate to other pages when clicked. </p>
-        <a href="As a markup language, HTML can format text into images, tables, links, and more.
+        <a href="<p> As a markup language, HTML can format text into images, tables, links, and more.
           Created by Tim Berners-Lee, HTML lays the foundation for web page design. The latest version, 
           HTML5, released on October 28, 2014, by W3C, introduced new features for handling multimedia 
-          elements like video and audio more efficiently." class="s-btnn"> Read More</a>
+          elements like video and audio more efficiently. </P>" class="s-btnn"> Read More</a>
       </div>
 
       <div class="service-box">
