--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </div>
   </div>
 
-  <!-- drop-section -->
+  <!------------------------ drop-section -------------------------->
   <div class="service" id="section3">
     <div class="text-center">
       <h2>My service</h2>
@@ -98,10 +98,6 @@
         <h3>Front-End</h3>
         <p>HTML is essential for web development, providing the structure and layout of web pages.Hypertext refers to text containing links,
           or hyperlinks, that navigate to other pages when clicked. </p>
-        <a href="<p> As a markup language, HTML can format text into images, tables, links, and more.
-          Created by Tim Berners-Lee, HTML lays the foundation for web page design. The latest version, 
-          HTML5, released on October 28, 2014, by W3C, introduced new features for handling multimedia 
-          elements like video and audio more efficiently. </P>" class="s-btnn"> Read More</a>
       </div>
 
       <div class="service-box">
@@ -110,10 +106,10 @@
           <path
             d="M10.478 1.647a.5.5 0 1 0-.956-.294l-4 13a.5.5 0 0 0 .956.294zM4.854 4.146a.5.5 0 0 1 0 .708L1.707 8l3.147 3.146a.5.5 0 0 1-.708.708l-3.5-3.5a.5.5 0 0 1 0-.708l3.5-3.5a.5.5 0 0 1 .708 0m6.292 0a.5.5 0 0 0 0 .708L14.293 8l-3.147 3.146a.5.5 0 0 0 .708.708l3.5-3.5a.5.5 0 0 0 0-.708l-3.5-3.5a.5.5 0 0 0-.708 0" />
         </svg>
-        <h3>Web Development</h3>
-        <p>Web development is the work involved in developing a website for the Internet (World Wide Web) or an
-          intranetWeb development applications.</p>
-        <a href="#" class="s-btnn"> Read More</a>
+        <h3>Databases</h3>
+        <p>a database is an organized collection of data or a type of data store based on the use of a database management system (DBMS), 
+          the software that interacts with end users, applications,
+          and the database itself to capture and analyze the data.</p>
       </div>
 
       <div class="service-box">
@@ -124,14 +120,14 @@
           <path fill-rule="evenodd"
             d="M7.646 4.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707V14.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708z" />
         </svg>
-        <h3>Upload</h3>
-        <p>Upload is an American science fiction comedy-drama television series created by Greg Daniels.[1] The
-          series premiered on May 1, 2022 applications.</p>
-        <a href="#" class="s-btnn"> Read More</a>
+        <h3>Back-End Developer</h3>
+        <p>In software architecture, there may be many layers between the hardware and end user. The front is an abstraction,
+          simplifying the underlying component by providing a user-friendly interface,
+          while the back usually handles data storage and business logic.</p>
       </div>
     </div>
     </section><br>
-    <!-- contact-section -->
+    <!----------------- contact-section ----------------------->
     <section class="contact" id="section4">
       <div class="left-contact">
         <div class="in">
@@ -140,7 +136,7 @@
             <path
               d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z" />
           </svg>
-          <h4>LinkedIn</h4>
+           <a href="www.linkedin.com/in/gokulbscit">LinkedIn</a>
         </div>
 
         <div class="in">
@@ -149,6 +145,7 @@
             <path
               d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8" />
           </svg>
+           <a href="https://github.com/gokulmano2003">GitHub</a>
           <h4>GitHub</h4>
         </div>
 
@@ -165,12 +162,11 @@
               d="M8.115 22.814a2.109 2.109 0 0 1-.474-.361c-1.327-1.333-2.66-2.66-3.984-3.997-1.989-2.008-2.302-4.937-.786-7.32a6 6 0 0 1 .839-1.004L13.333.489c.625-.626 1.498-.652 2.079-.067.56.563.527 1.455-.078 2.066-.769.776-1.539 1.55-2.309 2.325-.041.122-.14.2-.225.287-.863.876-1.75 1.729-2.601 2.618-.111.116-.262.186-.372.305-1.423 1.423-2.863 2.83-4.266 4.272-1.135 1.167-1.097 2.938.068 4.127 1.308 1.336 2.639 2.65 3.961 3.974.067.067.136.132.204.198.468.303.474 1.25.183 1.671-.321.465-.74.75-1.333.728-.199-.006-.363-.086-.529-.179z">
             </path>
           </svg>
-          <h4>LeetCode</h4>
+          <a href="https://leetcode.com/u/SmileyGk/">LeetCode</a>
         </div>
       </div>
       <div class="right-conact">
         <h2>profiles</h2>
-        <a href="#">Hire Me</a>
         <p>Hello there! I'm Gokul, an avid explorer of life's myriad adventures. With a passion for unraveling
           the
           mysteries of the world, I navigate through its complexities with curiosity as my compass and
@@ -183,7 +179,7 @@
   <div class="end-section " id="section5">
     <h3>P GokulGK</h3>
     <a class="resume"
-      href="https://www.canva.com/design/DAF88g__DQc/ObNpD1q5cz0ISWNRhjC5Zw/edit?utm_content=DAF88g__DQc&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">RESUME
+      href="https://www.canva.com/design/DAGGsR-vLbQ/3HgLjhorW4YseKcYUEcaJw/edit?utm_content=DAGGsR-vLbQ&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">RESUME
       LINK</a>
     <div class="end-icon">
       <a href="https://www.facebook.com/profile.php?id=100066216365747"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
