--- a/New-folder/signup.html
+++ b/New-folder/signup.html
@@ -64,8 +64,8 @@
             <button type="submit" onclick="btn()">Sign In</button>
         </form>
         <h5>____________Or____________</h5>
-        <button style="margin-top: 10px;">  <img src="/html/img/google.png" style="width: 20px; height: 20px; position: relative;top: 3px;" alt=""> <a href="#" style="text-decoration: none; color: #ddd;position: relative;top: -3px;">Continue With Google</a></button>
-        <button style="margin-top: 10px;">  <img src="/html/img/fb.png" style="width: 20px; height: 20px; position: relative;top: 3px;" alt=""> <a href="#" style="text-decoration: none; color: #ddd;position: relative;top: -3px;">Continue With Google</a></button>
+        <button style="margin-top: 10px;">  <img src="./Assest/google.png" style="width: 20px; height: 20px; position: relative;top: 3px;" alt=""> <a href="#" style="text-decoration: none; color: #ddd;position: relative;top: -3px;">Continue With Google</a></button>
+        <button style="margin-top: 10px;">  <img src="./Assest/fb.png" style="width: 20px; height: 20px; position: relative;top: 3px;" alt=""> <a href="#" style="text-decoration: none; color: #ddd;position: relative;top: -3px;">Continue With Google</a></button>
     </div>
 <script>
     function btn(){
