--- a/index.html
+++ b/index.html
@@ -48,7 +48,12 @@
             <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
               <li><a class="dropdown-item" href="./New-folder/index.html">login</a></li>
               <li><a class="dropdown-item" href="./New-folder/fack/index.html">fack store</a></li>
-              <li><a class="dropdown-item" href="#">link</a></li>
+              <li><a class="dropdown-item" href="./New-folder/assanment.html">assnment</a></li>
+              <li><a class="dropdown-item" href="./New-folder/light.html">light</a></li>
+              <li><a class="dropdown-item" href="./New-folder/otp.html">OTP</a></li>
+              <li><a class="dropdown-item" href="./New-folder/payslip.html">payslip</a></li>
+               <li><a class="dropdown-item" href="./New-folder/todo.html">todo</a></li>
+               <li><a class="dropdown-item" href="./New-folder/trafic.html">traffic</a></li>
             </ul>
           </li>
       </div>
