--- a/New-folder/light.html
+++ b/New-folder/light.html
@@ -27,7 +27,7 @@
             <input class="btnoff" type="button" value="Off" id="offbtn" onclick="lightoff()">
         </div>
     </div>
-    <script src="exam.js"></script>
+    <script src="light.js"></script>
 </body>
 
 </html>
