--- a/New-folder/light.html
+++ b/New-folder/light.html
@@ -1,33 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
+    <style>
+      .bulb{
+       display: flex;
+       justify-content: center;
+    
+      }
+      .cat{
+        display: flex;
+        justify-content: center;
+      }
+      .box{
+        width: 50vh;
+        height: 20vh;
+        margin-left: 82vh;
+        background-color: gray;
+      }
+      .btnon{
+        width: 10vh;
+        height: 10vh;
+        border: none;
 
+      }
+      .btnon:hover{
+        background-color: lightgreen;
+        width: 12vh;
+        height:12vh;
+        border: 2px solid black;
+        font-weight: 500;
+        font-size: x-large;
+
+    }
+    .btnoff{
+        width: 10vh;
+        height: 10vh;
+        border: none;
+    }
+    .btnoff:hover{
+        background-color:lightcoral;
+        width: 12vh;
+        height:12vh;
+        border: 2px solid black;
+        font-weight: 500;
+        font-size: x-large;
+    }
+    </style>
 </head>
-
-<body style="background-color: black;">
-    <div style="display: flex; justify-content: center;">
-        <img id="bulb" src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-dynamic-webapps/bulb-go-off-img.png" alt="" style="height: 35vh; ">
-    </div>
-    <div class="cat" style="display: flex; justify-content: center;">
-        <img id="eye" src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-dynamic-webapps/cat-eyes-img.png" height="245vh" alt="catimage">
-    </div>
-    <div class="box " style="width: 300px;height: 165px;background-color: gray;margin-left: auto; margin-right: auto;">
-        <p style="font-weight: 500;text-align: center;">  Swetch On & Off</p>
-        <div class="box">
-            <input class="btnon" type="button" value="ON" id="onbtn" onclick="lighton()">
-            <input class="btnoff" type="button" value="Off" id="offbtn" onclick="lightoff()">
+<body>
+    <div style="background-color: black; height: 100vh;" id="back">
+        <div class="bulb">
+            <img id="light" src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-dynamic-webapps/bulb-go-off-img.png" height="240vh" alt="bulboff">
         </div>
+        <div class="cat">
+            <img id="eye" src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-dynamic-webapps/cat-eyes-img.png" height="245vh" alt="catimage">
+        </div>
+        <div class="box">
+           <center><p style="position: relative;top: 10%; font-weight: bold; font-size:large;">Switched Off</p>
+            <input type="button" class="btnon" value="ON" style="border-radius: 10px;" id="onbtn" onclick="lighton()">
+            <input type="button" class="btnoff" value="Off" style="border-radius: 10px;" id="offbtn" onclick="lightoff()">
+        </center>
+
+        </div>
+
     </div>
     <script src="light.js"></script>
 </body>
-
 </html>
