--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
                     <div class="typed-text d-none">Full Stack Developer, Web Developer, Front End Developer, Apps
                         Developer,Back-end Developer, </div>
                     <div class="d-flex align-items-center pt-5">
-                        <a href="file:///C:/Users/ADMIN/Downloads/Resume_Professional_Template___Software_Engineer.pdf"
-                            class="btn btn-primary py-3 px-4 me-5">Download CV</a>
+                        <a href="https://www.canva.com/design/DAGGsR-vLbQ/3HgLjhorW4YseKcYUEcaJw/edit?utm_content=DAGGsR-vLbQ&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"
+                            class="btn btn-primary py-3 px-4 me-5">See My CV</a>
 
 
                     </div>
@@ -383,7 +383,7 @@
                     <div class="portfolio-img rounded overflow-hidden">
                         <img class="img-fluid" src="./newimg/traffic.png" alt="" style="height: 50vh;">
                         <div class="portfolio-btn">
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="img/project-1.jpg"
+                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="./newimg/traffic.png"
                                 data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
                             <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href=""><i
                                     class="fa fa-link"></i></a>
@@ -394,7 +394,7 @@
                     <div class="portfolio-img rounded overflow-hidden">
                         <img class="img-fluid" src="./newimg/payslip.jpg" alt="" style="height:50vh;">
                         <div class="portfolio-btn">
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="img/project-2.jpg"
+                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="./newimg/payslip.jpg"
                                 data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
                             <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href=""><i
                                     class="fa fa-link"></i></a>
@@ -405,7 +405,7 @@
                     <div class="portfolio-img rounded overflow-hidden">
                         <img class="img-fluid" src="./newimg/forms.jpg" alt="" style="height:50vh;">
                         <div class="portfolio-btn">
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="img/project-3.jpg"
+                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="./newimg/forms.jpg"
                                 data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
                             <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href=""><i
                                     class="fa fa-link"></i></a>
@@ -416,7 +416,7 @@
                     <div class="portfolio-img rounded overflow-hidden">
                         <img class="img-fluid" src="./newimg/blog-banner.png" alt="" style="height: 50vh;">
                         <div class="portfolio-btn">
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="img/project-4.jpg"
+                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="./newimg/blog-banner.png"
                                 data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
                             <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href=""><i
                                     class="fa fa-link"></i></a>
@@ -427,7 +427,7 @@
                     <div class="portfolio-img rounded overflow-hidden">
                         <img class="img-fluid" src="./newimg/download.jpeg" alt="" style="height: 50vh;">
                         <div class="portfolio-btn">
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="img/project-5.jpg"
+                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="./newimg/download.jpeg"
                                 data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
                             <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href=""><i
                                     class="fa fa-link"></i></a>
@@ -438,7 +438,7 @@
                     <div class="portfolio-img rounded overflow-hidden">
                         <img class="img-fluid" src="./newimg/" alt="">
                         <div class="portfolio-btn">
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="img/project-6.jpg"
+                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="./newimg/"
                                 data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
                             <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href=""><i
                                     class="fa fa-link"></i></a>
@@ -476,7 +476,7 @@
                             class="btn btn-square btn-primary me-2" href=""><i class="fab fa-facebook-f"></i></a>
                         <a href="https://github.com/gokulmano2003" class="btn btn-square btn-primary me-2" href=""><i
                                 class="fab fa-github"></i></a>
-                        <a href="www.linkedin.com/in/gokulbscit" class="btn btn-square btn-primary me-2" href=""><i
+                        <a href="https://www.linkedin.com/in/gokulbscit/" class="btn btn-square btn-primary me-2" href=""><i
                                 class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
