--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
                         <div class="portfolio-btn">
                             <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="./newimg/traffic.png"
                                 data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="./htmljs/index.html"><i
+                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="./htmljs/Tfile/index.html"><i
                                     class="fa fa-link"></i></a>
                         </div>
                     </div>
@@ -419,7 +419,7 @@
                         <div class="portfolio-btn">
                             <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="./newimg/payslip.jpg"
                                 data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="./htmljs/index.html"><i
+                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="./htmljs/pfile/index.html"><i
                                     class="fa fa-link"></i></a>
                         </div>
                     </div>
@@ -430,7 +430,7 @@
                         <div class="portfolio-btn">
                             <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="./newimg/forms.jpg"
                                 data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="./htmljs/index.html"><i
+                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="./htmljs/lfile/index.html"><i
                                     class="fa fa-link"></i></a>
                         </div>
                     </div>
@@ -441,7 +441,7 @@
                         <div class="portfolio-btn">
                             <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1"
                                 href="./img/light.jpg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="./htmljs/index.html"><i
+                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="./htmljs/clfile/index.html"><i
                                     class="fa fa-link"></i></a>
                         </div>
                     </div>
@@ -452,7 +452,7 @@
                         <div class="portfolio-btn">
                             <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1"
                                 href="./img/blog-banner.png" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="./htmljs/index.html"><i
+                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="./htmljs/cfile/index.html"><i
                                     class="fa fa-link"></i></a>
                         </div>
                     </div>
