--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
                         <div class="portfolio-btn">
                             <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1"
                                 href="./img/light.jpg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="./htmljs/clfile/index.html"><i
+                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="./htmljs/clfile/index.htm"><i
                                     class="fa fa-link"></i></a>
                         </div>
                     </div>
